logs/oh-my-vim.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ConfigObject'...
Listing './lib/python3.5/site-packages/ConfigObject/tests'...
Listing './lib/python3.5/site-packages/ConfigObject-1.2.2.egg-info'...
Listing './lib/python3.5/site-packages/argparse-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/oh_my_vim-0.7.egg-info'...
Listing './lib/python3.5/site-packages/ohmyvim'...
Compiling './lib/python3.5/site-packages/ohmyvim/fpcli.py'...
***   File "./lib/python3.5/site-packages/ohmyvim/fpcli.py", line 52
    build_url_withrev = lambda (base_url, nb_revision): ('%s?rev=%s' %
                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ohmyvim/scripts.py'...
***   File "./lib/python3.5/site-packages/ohmyvim/scripts.py", line 363
    print name
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
